file(GLOB CASES *.cc)
foreach(case ${CASES})
  get_filename_component(target ${case} NAME_WE)
  add_executable(${target} ${case})
  target_include_directories(${target} PRIVATE .)
  target_include_directories(${target} PRIVATE ${PROJECT_SOURCE_DIR}/source/utils)
  target_include_directories(${target} PRIVATE ${PROJECT_SOURCE_DIR}/source/solutions/C++)
  target_include_directories(${target} PRIVATE ${PROJECT_SOURCE_DIR}/source/solutions/C)
  target_link_libraries(${target} utils)
  # target_link_libraries(${target} csolutions)
  # string(SUBSTRING cpplib ${target} 5 64)
  # target_link_libraries(${target} ${cpplib})
endforeach()
